2007-07-30  Jens Wilke <jens.wilke@de.ibm.com>

	* libpp/profile_container.cpp: Remove unnecessary offset
	  calculation.

2007-07-18  Maynard Johnson <maynardj@us.ibm.com>

	* doc/Makefile.am: Include buffers diagram in dist

	* doc/oprofile.xml: Correct filename reference to opreport.xsd

2007-07-16  Maynard Johnson <maynardj@us.ibm.com>

        * configure.in: Bump to 0.9.4cvs.

2007-07-16  Maynard Johnson <maynardj@us.ibm.com>

	* configure.in:
	* Makefile.am:  Bump release to 0.9.3 and add a line to
	  EXTRA_DIST to distribute ChangeLog-2006.

2007-07-09  Maynard Johnson <maynardj@us.ibm.com>

        * doc/opreport.xsd:
        * libpp/xml_utils.cpp: Correct schema version bump

2007-07-02  Maynard Johnson <maynardj@us.ibm.com>

	* libpp/populate_for_spu.cpp: Fix logic in is_spu_profile()
	  to handle '--separate=thread' option.

2007-06-27  Maynard Johnson <maynardj@us.ibm.com>

	* ChangeLog: ChangeLog cleanup

2007-06-15  Maynard Johnson <maynardj@us.ibm.com>

	* doc/opreport.xsd:
	* libpp/xml_utils.cpp: Bump schema version to 2.0 to coincide with
	  callgraph elements added recently to the schema

2007-06-13  Maynard Johnson <maynardj@us.ibm.com>

	* doc/oprofile.xml:
	* events/Makefile.am:
	* events/ppc64/power5++/event_mappings:
	* events/ppc64/power5++/events:
	* events/ppc64/power5++/unit_masks:
	* libop/op_cpu_type.c:
	* libop/op_cpu_type.h:
	* libop/op_events.c:
	* utils/opcontrol:
	* utils/ophelp.c: Add support for POWER5++ (i.e., POWER5+ with PMU
	  set to POWER6 mode)

2007-06-12  dean gaudet  <dean@arctic.org>

	* events/i386/core_2/events:
	* events/i386/core_2/unit_masks:  updates to match
	  253669-022US ISA vol 3B from Intel.  (Including fix
	  for #1580064 from Arun Sharma.)

2007-06-08  dean gaudet  <dean@arctic.org>

	* events/x86-64/hammer/events:
	* events/x86-64/hammer/unit_masks: updates from December 2006
	  AMD update

2007-05-31  Maynard Johnson <maynardj@us.ibm.com>

	* libpp/symbol.h:
	* libutil++/bfd_support.h: